--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -27,6 +27,7 @@ repositories {
     maven {
         url = 'https://maven.brott.dev/' // for roadrunner
     }
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -40,5 +41,9 @@ dependencies {
     //next ftc
     implementation 'dev.nextftc:ftc:1.0.0'
     implementation 'dev.nextftc:hardware:1.0.0' // If you would like to use the hardware module
+
+    //ctrl alt ftc
+    implementation 'com.github.Thermal-Equilibrium:homeostasis-FTC:1.0.8'
+
 
 }
