--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,6 +1,8 @@
 repositories {
     mavenCentral()
     google() // Needed for androidx
+    maven { url 'https://jitpack.io' }
+    maven { url = 'https://maven.brott.dev/' }
 }
 
 dependencies {
@@ -13,5 +15,7 @@ dependencies {
     implementation 'org.firstinspires.ftc:FtcCommon:11.0.0'
     implementation 'org.firstinspires.ftc:Vision:11.0.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.github.Thermal-Equilibrium:homeostasis-FTC:1.0.8'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.5.0'
 }
 
